samples/_failures_safe/1761163339_75db3f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a69f048b.c: In function ‘main’:
./samples/SAFE/__tmp_a69f048b.c:197:5: error: expected expression at end of input
  197 |     printf("Tokens found: %d\n",
      |     ^~~~~~
./samples/SAFE/__tmp_a69f048b.c:197:5: error: expected declaration or statement at end of input
